--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="//cdn.jsdelivr.net/npm/eruda"></script>
-    <script>
+    <!-- <script>
       eruda.init(); // devtools for school
-    </script>
+    </script> -->
   </body>
 </html>
