--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
      <script>
       eruda.init(); // devtools for school
-    </script> -->
+    </script>
   </body>
 </html>
