--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/file.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frc-scouting-app</title>
+    <title>3464 Scouting</title> <!-- other teams please change you are not 3464-->
   </head>
   <body>
     <div id="root"></div>
